k8s/overlays/staging/app-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-api
spec:
  template:
    spec:
      containers:
        - name: banking-api
          imagePullPolicy: Always
